# air_alarms_api

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
src/: main.rs
src/libs/api_actions/: mod.rs
src/libs/data_actions/: mod.rs
src/libs/processing/: mod.rs
src/modules/api_actions/: mod.rs
src/modules/data_actions/: mod.rs
src/modules/fetch_data/: mod.rs
src/modules/other_data/: mod.rs
src/modules/processing/: mod.rs
