[package]
name = "alerts_api_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = ["json"] }
http = "1.1.0"
redis = { version = "0.27.0", features = ["tokio-comp"] }
log = "0.4.22"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
futures = "0.3.30"
chrono = "0.4.38"




[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1             